--- a/gateway.properties
+++ b/gateway.properties
@@ -1,1 +1,8 @@
 server.port=8080
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+spring.cloud.gateway.discovery.locator.enabled=true
+
+# rutele le face cu litere mici (de ex. din VEHICLE-SERVICE -> /vehicle-service/**)
+spring.cloud.gateway.discovery.locator.lower-case-service-id=true
