--- a/vehicle-service.properties
+++ b/vehicle-service.properties
@@ -1,1 +1,9 @@
-management.endpoints.web.exposure.include=*
+server.port=0
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/garage
+spring.datasource.username=postgres
+spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+management.endpoints.web.exposure.include=health,info,refresh
