--- a/vehicle-service.properties
+++ b/vehicle-service.properties
@@ -7,3 +7,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 management.endpoints.web.exposure.include=health,info,refresh
+
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
