--- a/gateway.properties
+++ b/gateway.properties
@@ -2,7 +2,11 @@ server.port=8080
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
-spring.cloud.gateway.discovery.locator.enabled=true
+management.endpoints.web.exposure.include=health,info,gateway,refresh
 
-# rutele le face cu litere mici (de ex. din VEHICLE-SERVICE -> /vehicle-service/**)
-spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+spring.cloud.gateway.discovery.locator.enabled=false
+
+spring.cloud.gateway.routes[0].id=vehicle-service-route
+spring.cloud.gateway.routes[0].predicates[0]=Path=/vehicle-service/**
+spring.cloud.gateway.routes[0].uri=lb://VEHICLE-SERVICE
+spring.cloud.gateway.routes[0].filters[0]=StripPrefix=1
