--- a/gateway.properties
+++ b/gateway.properties
@@ -2,7 +2,8 @@ server.port=8080
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
-management.endpoints.web.exposure.include=health,info,gateway,refresh
+management.endpoints.web.exposure.include=*
+management.endpoint.gateway.enabled=true
 
 spring.cloud.gateway.discovery.locator.enabled=false
 
