--- a/gateway.yml
+++ b/gateway.yml
@@ -1,14 +1,17 @@
 server:
   port: 8080
+
 eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
+
 management:
   endpoints:
     web:
       exposure:
-        include: "gateway,health,info,refresh"
+        include: '*'
+
 spring:
   cloud:
     gateway:
