--- a/gateway.yml
+++ b/gateway.yml
@@ -10,7 +10,10 @@ management:
   endpoints:
     web:
       exposure:
-        include: '*'
+        include: "*"
+  endpoint:
+    gateway:
+      enabled: true
 
 spring:
   cloud:
