--- a/gateway.yml
+++ b/gateway.yml
@@ -1,10 +1,20 @@
 server:
   port: 8080
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+
 management:
   endpoints:
     web:
       exposure:
         include: "*"
+  endpoint:
+    gateway:
+      enabled: true
+
 spring:
   cloud:
     gateway:
