--- a/vehicle-service.yml
+++ b/vehicle-service.yml
@@ -12,6 +12,9 @@ spring:
     hibernate:
       ddl-auto: update
     database-platform: org.hibernate.dialect.PostgreSQLDialect
+  sql:
+    init:
+      mode: always
 management:
   endpoints:
     web:
