--- a/client-service.yml
+++ b/client-service.yml
@@ -16,3 +16,9 @@ spring:
 eureka:
   instance:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+    
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
