--- a/gateway.yml
+++ b/gateway.yml
@@ -37,3 +37,9 @@ spring:
             - Path=/client-service/**
           filters:
             - StripPrefix=1
+        - id: repair-service-route
+      uri: lb://REPAIR-SERVICE
+      predicates:
+        - Path=/repair-service/**
+      filters:
+        - StripPrefix=1
