--- a/dashboard-service.yml
+++ b/dashboard-service.yml
@@ -1,2 +1,11 @@
 server:
   port: 8000
+
+management:
+endpoints:
+  web:
+    exposure:
+      include: "*"
+metrics:
+  tags:
+    application: ${spring.application.name}
