--- a/garage-service.yml
+++ b/garage-service.yml
@@ -21,4 +21,8 @@ management:
   endpoints:
     web:
       exposure:
-        include: "health,info,refresh"
+        include: "*"
+
+metrics:
+    tags:
+      application: ${spring.application.name}
