--- a/garage-service.yml
+++ b/garage-service.yml
@@ -16,6 +16,7 @@ spring:
 eureka:
   instance:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+    prefer-ip-address: true
 
 management:
   endpoints:
