--- a/garage-service.yml
+++ b/garage-service.yml
@@ -16,10 +16,9 @@ spring:
 eureka:
   instance:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
-    prefer-ip-address: true
 
 management:
   endpoints:
     web:
       exposure:
-        include: "*"
+        include: "health,info,refresh"
